# ai-data-engineer-roadmap

./: .gitignore  README.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_CHECKLIST.md  main.py  pyproject.toml  requirements.txt
month-01-python-sql-foundations/article-001-python-fundamentals/: README.md  basics.py  data_processor.py  data_types.py  operations.py  sales_summary.csv  sample_sales.csv
month-01-python-sql-foundations/article-002-control-flow-validation/: README.md  conditionals_basics.py  csv_processor.py  data_validator_v1.py  error_handling.py  list_comprehensions.py  loops_basics.py  production_validator.py  sample_sales_with_errors.csv  test_sales_data.csv  while_loops.py
month-01-python-sql-foundations/article-003-functions-modules/: README.md  decorators.py  functions_basics.py  lambda_functions.py  pipeline_demo.py
month-01-python-sql-foundations/article-004-file-handling-apis/: README.md  api_client.py  config.json  csv_operations.py  database_operations.py  events.jsonl  excel_operations.py  json_operations.py  large_dataset.csv  multi_sheet.xlsx  multi_source_pipeline.py  products.json  s3_operations.py  sample_sales.csv  sample_sales.xlsx  special_chars.csv
month-01-python-sql-foundations/article-005-data-transformation-cleaning/: Documentaiton.md  data_for_feature_engineering.csv  data_for_scaling.csv  data_type_conversions.py  data_with_duplicates.csv  duplicates_handling.py  feature_engineering.py  messy_customer_data.csv  messy_production_data.csv  messy_text_data.csv  missing_values.py  mixed_type_data.csv  normalization_standardization.py  (+3 more)
(+44 files in other folders)
