[project]
name = "ai-data-engineer-roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.64",
    "colorama>=0.4.6",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
